--- a/trying_sentence_highlighting.ipynb
+++ b/trying_sentence_highlighting.ipynb
@@ -16,7 +16,97 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "## Get important words (pretty much the same as \"why_opinion_faster\"\n",
+      "ratio = m.clf.feature_log_prob_[1]-m.clf.feature_log_prob_[0]\n",
+      "opinion_words = [ ( 0, #round(count*np.exp(ratio[i]),2) ,\n",
+      "                    round(count,2) , \n",
+      "                    round(ratio[i],0) , \n",
+      "                    m.vectorizer.get_feature_names()[i] ) for i,count in enumerate(m.vect.toarray()[0]) if count>0]\n",
+      "opinion_words_sorted = sorted(opinion_words, key=lambda x:x[2])\n",
+      "opinion_words_sorted[-20:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "[(0, 0.05, 2.0, u'physiological'),\n",
+        " (0, 0.03, 2.0, u'rep'),\n",
+        " (0, 0.09, 2.0, u'sarin'),\n",
+        " (0, 0.04, 2.0, u'select'),\n",
+        " (0, 0.1, 2.0, u'sen'),\n",
+        " (0, 0.03, 2.0, u'sept'),\n",
+        " (0, 0.05, 2.0, u'steadfastly'),\n",
+        " (0, 0.05, 2.0, u'throated'),\n",
+        " (0, 0.05, 2.0, u'unravels'),\n",
+        " (0, 0.02, 2.0, u'words'),\n",
+        " (0, 0.04, 3.0, u'aug'),\n",
+        " (0, 0.04, 3.0, u'contemplate'),\n",
+        " (0, 0.04, 3.0, u'degrade'),\n",
+        " (0, 0.04, 3.0, u'murphy'),\n",
+        " (0, 0.04, 3.0, u'skeptic'),\n",
+        " (0, 0.04, 3.0, u'slaughtered'),\n",
+        " (0, 0.04, 3.0, u'thug'),\n",
+        " (0, 0.04, 4.0, u'foxnews'),\n",
+        " (0, 0.04, 4.0, u'invite'),\n",
+        " (0, 0.04, 4.0, u'reflection')]"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "## Get important words (pretty much the same as \"why_opinion_faster\"\n",
+      "ratio = m.clf.feature_log_prob_[0]-m.clf.feature_log_prob_[1]\n",
+      "opinion_words = [ ( 0, #round(count*np.exp(ratio[i]),2) ,\n",
+      "                    round(count,2) , \n",
+      "                    round(ratio[i],0) , \n",
+      "                    m.vectorizer.get_feature_names()[i] ) for i,count in enumerate(m.vect.toarray()[0]) if count>0]\n",
+      "opinion_words_sorted = sorted(opinion_words, key=lambda x:x[2])\n",
+      "opinion_words_sorted[-20:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "[(0, 0.07, 2.0, u'lawmakers'),\n",
+        " (0, 0.09, 2.0, u'mcdonough'),\n",
+        " (0, 0.02, 2.0, u'monday'),\n",
+        " (0, 0.05, 2.0, u'nerve'),\n",
+        " (0, 0.04, 2.0, u'ordering'),\n",
+        " (0, 0.07, 2.0, u'said'),\n",
+        " (0, 0.11, 2.0, u'saturday'),\n",
+        " (0, 0.02, 2.0, u'scheduled'),\n",
+        " (0, 0.03, 2.0, u'ships'),\n",
+        " (0, 0.03, 2.0, u'speculation'),\n",
+        " (0, 0.23, 2.0, u'sunday'),\n",
+        " (0, 0.02, 2.0, u'troops'),\n",
+        " (0, 0.02, 2.0, u'tuesday'),\n",
+        " (0, 0.04, 3.0, u'http'),\n",
+        " (0, 0.04, 3.0, u'impassioned'),\n",
+        " (0, 0.02, 3.0, u'parliament'),\n",
+        " (0, 0.04, 3.0, u'proceeding'),\n",
+        " (0, 0.04, 3.0, u'reservations'),\n",
+        " (0, 0.04, 4.0, u'revise'),\n",
+        " (0, 0.04, 4.0, u'samples')]"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
